generate + compile
